...
    return (
        <View style={authStyles.container}>
            <TouchableOpacity onPress={() => router.navigate('/(tabs)/profile')}>
                <Text style={authStyles.returnText}>← Return</Text>
            </TouchableOpacity>

            <Text style={authStyles.title}>Create Account</Text>

            <View style={authStyles.section}>
                <Text style={authStyles.label}>Username</Text>
                <TextInput
                    style={authStyles.input}
                    placeholder="Your Username"
...
                    secureTextEntry
                    onChangeText={(text) => setPassword(text)}
                />
            </View>

            <TouchableOpacity style={authStyles.primaryButton} onPress={handleSignUp}>
                <Text style={authStyles.primaryButtonText}>Sign Up</Text>
            </TouchableOpacity>

            {isLoading && (
                <ActivityIndicator
                    testID="activity-indicator"
                    size="large"
...
