appId: com.currycurry11.myapp
---
- launchApp:
    clearState: true
- tapOn: "Profile"
- tapOn: "Forgot password?"
- assertVisible: "Forgot password"