appId: com.currycurry11.myapp
---
- launchApp:
    clearState: true
- tapOn: "Profile"
- tapOn: "Sign Up"
- assertVisible: "Create Account"